
ChangeLog
 [ + added, - removed, * changed ]
 + 27Apr2016 Add support for IBM Platform MPI
 * 27Apr2016 Bug fixes in the instrumentation of OMPT target devices
 + 25Apr2016 Added instrumentation for the following IO calls: fread, fwrite, pread, pwrite, readv, writev, preadv, pwritev
 * 21Apr2016 Update m4 macro to look in lib/x86_64-linux-gnu (support Ubuntu)
 * 08Apr2016 Changed the default PAPI counters in LINUX examples to avoid errors with the latest versions of PAPI and PAPI_BR_MSP
 * 07Apr2016 Removed flag -shared from the lib_dyn_mpitracec_la_LDFLAGS and lib_dyn_mpitracef_la_LDFLAGS, which was set to tell libtool just to generate shared libs (no .a's), but this generated .so's with two dependencies to MRNet, one resolved and one unresolved.
 * 07Apr2016 Extrae version 3.3.0 final release
 * 07Apr2016 Added initial support for tracing of OMPT target devices (accelerators, FPGAs, etc)
 * 06Apr2016 Priorize the search for mpicc family of compilers under bin64 before bin
 * 29Mar2016 Fix trace.sh within DynInst examples (CUDA+MPI and MPI)
 * 24Mar2016 Emit only once types associated to Extrae_register_codelocation_type & Extrae_register_function_address
 * 22Mar2016 Fixes in extrae-cmd / Added documentation for Extrae-cmd
 * 11Mar2016 read()/write() now emit callstack & descriptor type
 * 10Mar2016 Add support to capture different signal types
             Add <flush-sampling-buffer-at-instrumentation-point> option
 * 09Mar2016 Increase classification of memory hierarchy in PEBS samples
 * 04Mar2016 Fix trace-file naming (sometimes failed to guess the binary name)
 + 02Mar2016 Add code reference to memory allocated object
 + 29Feb2016 Included the size of MPI-IO operations in the trace 
 * 26Feb2016 States per thread are no longer allocated statically but
              reallocated on demand.
             Remove SVN keywords for most of the files.
 * 19Feb2016 Fixed bug preparing the output trace name