@@ -1,0 +1,8 @@
+
+#ifndef __OMPT_WRAPPER_H__
+#define __OMPT_WRAPPER_H__
+
+void ompt_finalize();
+
+#endif /* __OMPT_WRAPPER_H__ */
+
