@@ -1,6 +1,7 @@
 
 ChangeLog
  [ + added, - removed, * changed ]
+ + 28Apr2016 Added tracing finalization mechanism for the OMPT target devices, started by Extrae at Backend_Finalization using calls to ompt_target_stop_trace.
  + 27Apr2016 Add support for IBM Platform MPI
  * 27Apr2016 Bug fixes in the instrumentation of OMPT target devices
  + 25Apr2016 Added instrumentation for the following IO calls: fread, fwrite, pread, pwrite, readv, writev, preadv, pwritev
